--- a/views/num_phrase.erb
+++ b/views/num_phrase.erb
@@ -1,2 +1,3 @@
 <% phrase_array = [] %>
-<% @number.times "#{@phrase}" %>
+<% @number.times {|x| phrase_array << @phrase_array} %>
+<%= "#{phrase_array}"%>
