Automatically backed up by Learn

--- a/views/operation.erb
+++ b/views/operation.erb
@@ -1,1 +1,7 @@
-<%  @num1 @operation @num2 %>
+<%case @operation
+  when 'add' %>
+  <%= @num1 + @num2 %>
+  <%when 'subtract' %>
+  <%= @num1 - @num2 %>
+  <%w
+  
