--- a/views/operation.erb
+++ b/views/operation.erb
@@ -1,7 +1,11 @@
-<%case @operation
+<% case @operation
   when 'add' %>
   <%= @num1 + @num2 %>
   <% when 'subtract' %>
   <%= @num1 - @num2 %>
-  <%w
+  <% when 'multiply' %>
+  <%= @num1 * @num2 %>
+  <% when 'divide' %>
+  <%= @num1 / @num2 %>
+<% end %>
   
